# docmind-os

./: .cursorrules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  render.yaml
backend/: .coverage  .dockerignore  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph_reasoning_agent.py
backend/app/core/: __init__.py  auth.py  config.py  exceptions.py  logging.py  security.py  startup_validation.py  state_machine.py  telemetry.py
backend/app/db/: __init__.py  graph.py  graph_schema.py  postgres.py  redis.py  supabase.py
backend/app/knowledge/: __init__.py  confidence.py  ontology.py
backend/app/middleware/: rate_limit.py  request_context.py
backend/app/schemas/: auth.py  chat.py  document.py  ingestion.py  invite.py  profile.py
backend/app/services/: document_enrichment.py  document_service.py  document_upload_policy.py  graph_service.py  ingestion_service.py  invite_service.py  job_queue.py  lifecycle_service.py  profile_service.py  prompt_builder.py  provenance_service.py  rag_service.py
backend/app/utils/: ai_quality.py  categorization.py  chunking.py  content_hash.py  cost_tracker.py  embeddings.py  guardrails.py  invite_codes.py  media_metadata.py  parsers.py  retrieval.py  triple_extractor.py
backend/app/workers/: celery_app.py  tasks.py
backend/app/workflows/: __init__.py
backend/tests/: conftest.py  run_tests.py  test_auth.py  test_chat.py  test_documents.py  test_health.py
(+111 files in other folders)
