[project]
name = "doc-hub-api"
version = "0.1.0"
description = "Doc-Hub — FastAPI backend for Enterprise AI Document SaaS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic[email]>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "supabase>=2.10.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
